--- a/speed.html
+++ b/speed.html
@@ -1,84 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Typing Speed Test</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-    }
-    #sentence {
-      font-size: 24px;
-      margin-bottom: 15px;
-      font-weight: bold;
-      min-height: 40px;
-    }
-    #input {
-      padding: 8px;
-      font-size: 18px;
-      width: 300px;
-      text-align: center;
-    }
-    #score, #timer {
-      font-size: 18px;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>Typing Speed Test</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    padding: 20px;
+    background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
+    min-height: 100vh;
+    margin: 0;
+  }
+  #instructionOverlay {
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: rgba(0,0,0,0.75);
+    color: white;
+    font-size: 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    z-index: 1000;
+  }
+  #instructionOverlay button {
+    margin-top: 20px;
+    padding: 12px 30px;
+    font-size: 18px;
+    border-radius: 6px;
+    border: none;
+    background-color: #ff6f61;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  #instructionOverlay button:hover {
+    background-color: #e65b50;
+  }
+  #sentence {
+    font-size: 24px;
+    margin-bottom: 15px;
+    font-weight: bold;
+    color: #fff;
+    min-height: 40px;
+  }
+  #input {
+    padding: 10px;
+    font-size: 18px;
+    width: 320px;
+    text-align: center;
+    border-radius: 6px;
+    border: none;
+    outline: none;
+  }
+  #score, #timer, #message {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 15px;
+    color: #fff;
+  }
+  #message {
+    margin-top: 30px;
+  }
+</style>
 </head>
 <body>
 
-  <h2>Typing Speed Test</h2>
+<div id="instructionOverlay">
+  <p>Welcome to the Typing Speed Test!<br/>
+  Type the sentences shown as fast and accurately as you can.<br/>
+  Press Enter when you finish typing the sentence.<br/>
+  You have 60 seconds.<br/>
+  Good luck!</p>
+  <button id="startBtn">OK</button>
+</div>
 
-  <p id="sentence">Loading...</p>
-  <input type="text" id="input" autocomplete="off" placeholder="Type here..." oninput="checkTyping()" />
-  <p id="score">Correct: 0</p>
-  <p id="timer">⏳ Time: 60s</p>
+<h2>Typing Speed Test</h2>
+<p id="sentence">Loading...</p>
+<input type="text" id="input" autocomplete="off" disabled placeholder="Type here..." />
+<p id="score">Correct: 0</p>
+<p id="timer">⏳ Time: 60s</p>
+<p id="message"></p>
 
-  <script>
-    const sentences = [
-      "Hello world",
-      "Practice makes perfect",
-      "JavaScript is fun",
-      "Spin the wheel",
-      "Typing is cool"
-    ];
+<script>
+  const overlay = document.getElementById('instructionOverlay');
+  const startBtn = document.getElementById('startBtn');
+  const sentenceEl = document.getElementById('sentence');
+  const input = document.getElementById('input');
+  const scoreEl = document.getElementById('score');
+  const timerEl = document.getElementById('timer');
+  const messageEl = document.getElementById('message');
 
-    let score = 0;
-    let time = 60;
-    let currentSentence = "";
+  const sentences = [
+    "Hello world",
+    "Practice makes perfect",
+    "JavaScript is fun",
+    "Spin the wheel",
+    "Typing is cool"
+  ];
 
-    function newSentence() {
-      currentSentence = sentences[Math.floor(Math.random() * sentences.length)];
-      document.getElementById("sentence").innerText = currentSentence;
-      document.getElementById("input").value = "";
-      document.getElementById("input").focus();
-    }
+  let score = 0;
+  let time = 60;
+  let currentSentence = "";
+  let gameStarted = false;
+  let timerInterval;
 
-    function checkTyping() {
-      const userInput = document.getElementById("input").value;
-      if (userInput === currentSentence) {
-        score++;
-        document.getElementById("score").innerText = "Correct: " + score;
-        newSentence();
-      }
-    }
+  if(sessionStorage.getItem('typingInstructionsShown')) {
+    overlay.style.display = 'none';
+    startGame();
+  }
 
+  startBtn.onclick = () => {
+    sessionStorage.setItem('typingInstructionsShown', 'true');
+    overlay.style.display = 'none';
+    startGame();
+  };
+
+  function newSentence() {
+    currentSentence = sentences[Math.floor(Math.random() * sentences.length)];
+    sentenceEl.innerText = currentSentence;
+    input.value = "";
+    messageEl.innerText = "";
+    input.focus();
+  }
+
+  function startGame() {
+    gameStarted = true;
+    score = 0;
+    time = 60;
+    scoreEl.innerText = "Correct: 0";
+    timerEl.innerText = `⏳ Time: ${time}s`;
+    input.disabled = false;
     newSentence();
 
-    const timerInterval = setInterval(() => {
-      document.getElementById("timer").innerText = "⏳ Time: " + time + "s";
+    timerInterval = setInterval(() => {
       time--;
-
+      timerEl.innerText = `⏳ Time: ${time}s`;
       if (time < 0) {
         clearInterval(timerInterval);
-        alert("⏱️ Time's up! Your score: " + score);
-        document.getElementById("input").disabled = true;
+        endGame();
       }
     }, 1000);
-  </script>
+  }
+
+  function checkTyping() {
+    if (!gameStarted) return;
+    if (input.value === currentSentence) {
+      score++;
+      scoreEl.innerText = "Correct: " + score;
+      newSentence();
+    }
+  }
+
+  input.addEventListener('keydown', (e) => {
+    if (e.key === 'Enter') {
+      e.preventDefault();
+      checkTyping();
+    }
+  });
+
+  startBtn.disabled = false;
+
+  function endGame() {
+    gameStarted = false;
+    input.disabled = true;
+    sentenceEl.innerText = "⏰ Time's up!";
+    messageEl.innerText = `Your final score is ${score}. Returning to spinner in 10 seconds...`;
+
+    setTimeout(() => {
+      window.location.href = "index.html";
+    }, 10000);
+  }
+</script>
 
 </body>
 </html>
