--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 <title>Login - Spin Play Enjoy</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg">
+<body class=" background: linear-gradient(135deg, #f6d365 0%, #fda085 100%)">
 <div class="login-container">
   <h2>Login</h2>
   <input type="text" id="username" placeholder="Enter username">
