--- a/memory.html
+++ b/memory.html
@@ -119,7 +119,7 @@
   const timerDisplay = document.getElementById('timer');
   const resultText = document.getElementById('resultText');
 
-  const emojis = ['🤍','🤎','💜','❤️','🩷','🧡','💛','💚','💙','🩵'];
+  const emojis = ['🤍','🤎','💜','❤️','😍','🧡','💛','💚','💙','😎'];
   let cards = emojis.concat(emojis);
 
   let firstCard = null;
