--- a/color.html
+++ b/color.html
@@ -150,7 +150,7 @@
   function endGame() {
     gameStarted = false;
     buttonsDiv.innerHTML = "";
-    targetColorEl.innerText = "⏰ Time's up! Final Score: " + score. "Returning to spinner in 10 sec.....;
+    targetColorEl.innerText = "⏰ Time's up! Final Score: " + score;
     // Redirect after 10 seconds
     setTimeout(() => {
       window.location.href = 'index.html';
